<resources>
    <string name="app_name">MyRecyclerApplication</string>

    <!--    ActivityButton-->
    <string name="activity_button_hint">Enter Integer</string>

    <!--    ActivityRadioButton-->

    <string name="activity_radio_button_title">Please select a language</string>
    <string name="activity_radio_button_result">Nothing Selected</string>
    <string name="activity_radio_button_choice_java">Java</string>
    <string name="activity_radio_button_choice_kotlin">Kotlin</string>
    <string name="activity_radio_button_choice_python">Python</string>
    <string name="activity_radio_button_love_java">You love Java!</string>
    <string name="activity_radio_button_love_kotlin">You love Kotlin!</string>
    <string name="activity_radio_button_love_python">You love Python!</string>

    <!--    Activity Persistent Data-->
    <string name="activity_persistent_data_title">Set Vessel Data</string>
    <string name="activity_persistent_boat_name">Vessel Name</string>
    <string name="activity_persistent_boat_length">Vessel Length</string>
    <string name="activity_persistent_boat_registration">Registration</string>
    <string name="activity_persistent_submit">Save/Update</string>

    <!--    Activity Slider-->
    <string name="activity_slider_title">Slider Fun!</string>
    <string name="activity_slider_result">Result</string>
    <string name="title_activity_maps">ActivityMaps</string>

    <!--    Activity GPS-->
    <string name="activity_gps_button">Get GPS Coordinate</string>
    <string name="activity_gps_tracker_dialog_title">GPS Settings</string>
    <string name="activity_gps_tracker_dialog_message">GPS should be running to use this feature, please turn it on uwu</string>
    <string name="activity_gps_tracker_dialog_button">Settings</string>
    <string name="activity_gps_tracker_dialog_button_negative">no way</string>

<!--    Activity Remote Data-->
    <string name="activity_remote_data_image_description">this is an image</string>


</resources>