<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/beach"
    tools:context=".ActivityPersistentData"
    >

    <TextView
        android:id="@+id/activityPersistentDataTitle"
        android:layout_marginTop="@dimen/global_padding_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_padding_10dp"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/global_30sp_text_size"
        android:text="@string/activity_persistent_data_title" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_padding_10dp"
        android:layout_margin="@dimen/global_padding_10dp"
        app:boxStrokeColor="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityBoatVesselName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/global_title_text_size"
            android:singleLine="true"
            android:hint="@string/activity_persistent_boat_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_padding_10dp"
        android:layout_margin="@dimen/global_padding_10dp"
        app:boxStrokeColor="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityBoatVesselLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/global_title_text_size"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/activity_persistent_boat_length" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/global_padding_10dp"
        android:layout_margin="@dimen/global_padding_10dp"
        app:boxStrokeColor="@color/teal_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activityBoatVesselRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/global_title_text_size"
            android:singleLine="true"
            android:hint="@string/activity_persistent_boat_registration" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/activityPersistentDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/global_padding_10dp"
        android:padding="@dimen/global_padding_10dp"
        android:layout_margin="@dimen/global_margin_topmost"
        android:text="@string/activity_persistent_submit" />
</LinearLayout>